# linear_programming

./: .gitignore  CLAUDE.md  README.md  basic_solution.py  gurobi_model.py  inverse.py  latex_editing.py  main.tex  pyproject.toml  sandbox.py  sandbox_exam.py  simplex.py  solving_class.py
ejercicios/: __init__.py  __main__.py  _plantilla.py  dos_fases_a.py  lemke.py
examples/: demo.py
exams/: __init__.py  cli.py  coleccion.tex  compile.py  models.py  render.py
exams/bank/: __init__.py  demo_dieta.py  demo_muebles.py  dieta_min.py  dos_fases_a.py  mueblespro.py
exams/coleccion/: coleccion.tex
exams/ejercicios/: 01a_dos_fases_a.tex  01a_dos_fases_a_sol.tex  01b_dos_fases_b_sol.tex  02a_inversa_base_a.tex  02a_inversa_base_a_sol.tex  02b_inversa_base_b.tex  03a_empresa_minera_a.tex  03b_empresa_minera_b.tex  BandB_01.tex  BandB_01_sol.tex  BandB_PE3.tex  BandB_PE3_sol.tex  BandB_sin restricciones.tex  BandB_sin restricciones_sol.tex  BranchAndBound_mochila.tex  BranchAndBound_mochila_sol.tex  asignacion_pelicula.tex  (+143 more)
linprog/: __init__.py  basic_solution.py  basis.py  fractions_utils.py  latex.py  linalg.py  parser.py  parsing.py  problem.py  sensitivity.py  solvers.py
problemas/: __init__.py  examen.tex  main.tex  soluciones.tex
tests/: conftest.py  test_basis.py  test_ejercicios.py  test_exams.py  test_latex_forms.py  test_lemke.py  test_parser.py  test_postopt.py  test_sensitivity.py  test_simplex.py  test_solvers.py  test_standard_form.py  test_tableau.py  test_two_phase.py  test_verbose_tex.py
tex/: dos_fases_a.tex  dos_fases_a_sol.tex  lemke_sol.tex
(+20 files in other folders)
