[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linprog"
version = "0.1.0"
description = "Educational linear programming library with exact arithmetic and LaTeX output (MCIO1)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["linprog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
